--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#b2ff59</color>
-    <color name="primaryLightColor">#e7ff8c</color>
-    <color name="primaryDarkColor">#7ecb20</color>
+<!--    <color name="primaryColor">#b2ff59</color>-->
+<!--    <color name="primaryLightColor">#e7ff8c</color>-->
+<!--    <color name="primaryDarkColor">#7ecb20</color>-->
+    <color name="primaryColor">#FFFFF0</color>
+    <color name="primaryDarkColor">#263238</color>
     <color name="secondaryColor">#00e5ff</color>
     <color name="secondaryLightColor">#6effff</color>
     <color name="secondaryDarkColor">#00b2cc</color>
     <color name="primaryTextColor">#303030</color>
     <color name="secondaryTextColor">#303030</color>
+
+    <color name="colorAccent">#2E7D32</color>
+    <color name="colorGrey">#757575</color>
 </resources>
