--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/homeFragment"
         android:name="com.example.wingsgroup.products.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_productDetailFragment"
+            app:destination="@id/productDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.wingsgroup.auth.LoginFragment"
@@ -34,5 +38,14 @@
         <action
             android:id="@+id/action_registerFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/productDetailFragment"
+        android:name="com.example.wingsgroup.products.ProductDetailFragment"
+        android:label=""
+        tools:layout="@layout/fragment_product_detail" >
+        <argument
+            android:name="code"
+            app:argType="string" />
     </fragment>
 </navigation>
