--- a/app/src/main/res/layout/badge_cart_action.xml
+++ b/app/src/main/res/layout/badge_cart_action.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clipToPadding="false"
-    android:focusable="true">
+    android:focusable="true"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground">
     
     <ImageView
         android:layout_width="wrap_content"
